<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    android:background="@drawable/rocket01">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/Button01"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/level"
                android:onClick="goToLevel"
                android:soundEffectsEnabled="false"
                android:text="@string/level_01_button_title"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/Button02"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/level"
                android:onClick="goToLevel"
                android:text="@string/level_02_button_title"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/Button03"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/level"
                android:onClick="goToLevel"
                android:text="@string/level_03_button_title"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/Button04"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/level"
                android:onClick="goToLevel"
                android:text="@string/level_04_button_title"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/Button05"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/level"
                android:onClick="goToLevel"
                android:text="@string/level_05_button_title"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/Button06"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/level"
                android:text="@string/level_06_button_title"
                android:onClick="goToLevel"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/Button07"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/level"
                android:text="@string/level_07_button_title"
                android:onClick="goToLevel"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/Button08"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/level"
                android:text="@string/level_08_button_title"
                android:onClick="goToLevel"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/Button09"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/level"
                android:text="@string/level_09_button_title"
                android:onClick="goToLevel"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/Button10"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="70dp"
                android:contentDescription="@string/level"
                android:text="@string/level_10_button_title"
                android:onClick="goToLevel"
                app:cornerRadius="50dp" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>