<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Grammar09Activity"
    android:background="@color/grammar_background_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/grammer_layout_margin"
        android:layout_marginEnd="@dimen/grammer_layout_margin">
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/grammar09_titel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sadə cümlələr"
            android:textColor="@color/grammar_text_color"
            android:background="@color/grammar_titelbackground_color"
            android:textStyle="bold"
            android:textSize="35dp"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/grammar09_introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grammar_text_color"
            android:background="@color/white"
            android:textStyle="italic"
            android:text="@string/rule_grammer09_sentences_introduction"/>

        <ImageView
            android:id="@+id/grammar09_sentence01_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/grammar_sentence01"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white">
            <ImageView
                android:id="@+id/grammar09_sentence01_sound"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/sound_green02"
                android:layout_gravity="center"
                android:clickable="true"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/grammar09_sentence01_ger"
                    android:paddingStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grammar_text_color"
                    android:text="@string/satzGrammer09_01_ger"/>
                <TextView
                    android:id="@+id/grammaer09_sentence01_az"
                    android:paddingStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grammar_text_color"
                    android:text="@string/satzGrammer09_01_az"/>
            </LinearLayout>
        </LinearLayout>


        <ImageView
            android:id="@+id/grammar09_sentence02_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/grammar_sentence02"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white">
            <ImageView
                android:id="@+id/grammar09_sentence02_sound"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/sound_green02"
                android:layout_gravity="center"
                android:clickable="true"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/grammar09_sentence02_ger"
                    android:paddingStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grammar_text_color"
                    android:text="@string/satzGrammer09_02_ger"/>
                <TextView
                    android:id="@+id/grammar09_sentence02_az"
                    android:paddingStart="20dp"
                    android:textColor="@color/grammar_text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/satzGrammer09_02_az"/>

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/grammar09_sentence03_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/grammar_sentence03"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white">
            <ImageView
                android:id="@+id/grammar09_sentence03_sound"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/sound_green02"
                android:layout_gravity="center"
                android:clickable="true"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/grammar09_sentence03_ger"
                    android:paddingStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grammar_text_color"
                    android:text="@string/satzGrammer09_03_ger"/>
                <TextView
                    android:id="@+id/grammar09_sentence03_az"
                    android:paddingStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grammar_text_color"
                    android:text="@string/satzGrammer09_03_az"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/grammar09_sentence04_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/grammar_sentence04"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white">
            <ImageView
                android:id="@+id/grammer09_sentence04_sound"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/sound_green02"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/grammar09_sentence04_ger"
                    android:paddingStart="20dp"
                    android:textColor="@color/grammar_text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/satzGrammer09_04_ger"/>
                <TextView
                    android:id="@+id/grammar09_sentence04_az"
                    android:paddingStart="20dp"
                    android:textColor="@color/grammar_text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/satzGrammer09_04_az"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/menu"
        android:background="@color/startbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:labelVisibilityMode="selected"
        app:itemIconSize="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>