<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Grammar11Activity"
    android:background="@color/grammar_background_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/grammer_layout_margin"
        android:layout_marginEnd="@dimen/grammer_layout_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/grammar11_titel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Əmr cümlələri"
            android:textColor="@color/grammar_text_color"
            android:background="@color/grammar_titelbackground_color"
            android:textStyle="bold"
            android:textSize="35dp"
            android:gravity="center"
            android:layout_marginBottom="50dp"/>
        <TextView
            android:id="@+id/grammar11_introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grammar_text_color"
            android:background="@color/white"
            android:layout_marginBottom="30dp"
            android:text="@string/rule_grammer11_imperativ_introduction"/>

        <ImageView
            android:id="@+id/grammar11_sentence01_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/grammar_imperative01"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white">
            <ImageView
                android:id="@+id/grammar11_sentence01_sound"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/sound_green02"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/grammar11_sentence01_ger"
                    android:paddingStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grammar_text_color"
                    android:text="@string/satzGrammer11_01_ger"/>
                <TextView
                    android:id="@+id/grammaer11_sentence01_az"
                    android:paddingStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grammar_text_color"
                    android:text="@string/satzGrammer11_01_az"/>
            </LinearLayout>
        </LinearLayout>


        <ImageView
            android:id="@+id/grammar11_sentence02_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/grammar_imperative02"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white">
            <ImageView
                android:id="@+id/grammar11_sentence02_sound"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/sound_green02"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/grammar11_sentence02_ger"
                    android:paddingStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grammar_text_color"
                    android:text="@string/satzGrammer11_02_ger"/>
                <TextView
                    android:id="@+id/grammar11_sentence02_az"
                    android:paddingStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grammar_text_color"
                    android:text="@string/satzGrammer11_02_az"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/menu"
        android:background="@color/startbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:labelVisibilityMode="selected"
        app:itemIconSize="30dp" />
</androidx.constraintlayout.widget.ConstraintLayout>